# Agenda_Avaliacoes_Academicas_cpp

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  resources.rc
.github/workflows/: update-readme-version.yml
mocks/: CMakeLists.txt  clear_builds.ps1  compileTranslations.cpp  compileTranslations.hpp  find_VersionEditor.cpp  find_VersionEditor.hpp
repo/: Agenda_Avaliacoes_Academicas.iss  Agenda_Avaliacoes_Academicas_mingw.iss  Agenda_Avaliacoes_Academicas_msvc.iss
source/: src_01_InicializadorMain.cpp  src_01_InicializadorMain.hpp
source/BancoDeDados/: Banco_Dados.cpp  Banco_Dados.hpp  Listas_Personalizadas.cpp  Listas_Personalizadas.hpp
source/BancoDeDados/DicionariosListasBancoDeDados/: CURSOS_EN.cpp  CURSOS_EN.hpp  CURSOS_PT.cpp  CURSOS_PT.hpp  EstruturasCursos.hpp  dicionario_de_cores.cpp  dicionario_de_cores.hpp  dicionario_disciplinas.cpp  dicionario_disciplinas.hpp  lista_avaliacoes_en_US.cpp  lista_avaliacoes_en_US.hpp  lista_avaliacoes_pt_BR.cpp  lista_avaliacoes_pt_BR.hpp  lista_cursos_en_US.cpp  lista_cursos_en_US.hpp  lista_cursos_pt_BR.cpp  lista_cursos_pt_BR.hpp  lista_turmas_en_US.cpp  lista_turmas_en_US.hpp  lista_turmas_pt_BR.cpp  lista_turmas_pt_BR.hpp  mapeamento_cursos.cpp  mapeamento_cursos.hpp  mapeamento_ementas.cpp  mapeamento_ementas.hpp  mapeamento_semestres.cpp  mapeamento_semestres.hpp
source/GerenciamentoAtividades/: Gerenciador_Atividades.cpp  Gerenciador_Atividades.hpp
source/GerenciamentoAtividades/GerenciadorAtividades/: gativ_01_criar_tabela.cpp  gativ_02_adicionar_atividade.cpp  gativ_03_remover_atividade.cpp  gativ_04_listar_atividades.cpp  gativ_04_listar_atividades.hpp  gativ_05_buscar_atividade.cpp  gativ_06_atualizar_atividade.cpp  gativ_07_submiter.cpp  gativ_08_limpar_entradas.cpp  gativ_09_limpar_ultima_entrada.cpp  gativ_10_exportar_para_pdf.cpp  gativ_11_update_textbox.cpp  gativ_12_excluir_item.cpp  gativ_13_editar_item.cpp  gativ_14_editar_detalhes_atividade.cpp  gativ_15_update_ementa.cpp  gativ_16_update_semestre.cpp  gativ_17_update_disciplinas.cpp  gativ_18_carregar_dados.cpp  gativ_19_definir_modo_cores.cpp  gativ_20_obter_modo_cores.cpp  gativ_21_cor_texto_do_sistema.cpp
source/GerenciamentoInterfaceGrafica/: Interface_Grafica.cpp  Interface_Grafica.hpp
source/GerenciamentoInterfaceGrafica/GerenciadorInterfaceGrafica/: ginter_01_SobreDialog.cpp  ginter_01_SobreDialog.hpp  ginter_02_OpcoesSobre.cpp  ginter_02_OpcoesSobre.hpp  ginter_03_exibir_sobre.cpp  ginter_03_exibir_sobre.hpp  ginter_04_center_on_screen.cpp  ginter_05_showEvent.cpp  ginter_06_create_widgets.cpp  ginter_07_create_button.cpp  ginter_08_create_menu.cpp  ginter_09_change_language.cpp  ginter_10_change_color_mode.cpp  ginter_10_change_color_mode.hpp  ginter_11_retranslate_ui.cpp  ginter_12_excluir_item_lista_personalizada.cpp  ginter_12_excluir_item_lista_personalizada.hpp
source/assets/ABOUT/: ABOUT_en_US.txt  ABOUT_pt_BR.txt  History_APP_en_US.txt  History_APP_pt_BR.txt
source/assets/CLC/: CLC_en_US.txt  CLC_pt_BR.txt
source/assets/COPYRIGHT/: AVISO DE COPYRIGHT E MARCA REGISTRA_pt_BR.txt  COPYRIGHT AND TRADEMARK NOTICE_en_US.txt
source/assets/EULA/: EULA_en_US.txt  EULA_pt_BR.txt
source/assets/NOTICES/: NOTICE_en_US.txt  NOTICE_pt_BR.txt
source/assets/PRIVACY_POLICY/: Privacy_Policy_en_US.txt  Privacy_Policy_pt_BR.txt
source/assets/RELEASE/: RELEASE NOTES_en_US.txt  RELEASE NOTES_pt_BR.txt
source/language/: tr_01_gerenciadorTraducao.cpp  tr_01_gerenciadorTraducao.hpp
source/language/translations/: manager_compression_en_US.qm  manager_compression_en_US.ts  manager_compression_pt_BR.qm  manager_compression_pt_BR.ts
source/utils/: ApplicationPathUtils.cpp  ApplicationPathUtils.hpp  CaminhoPersistenteUtils.cpp  CaminhoPersistenteUtils.hpp  ComboBoxUtils.cpp  ComboBoxUtils.hpp  IconUtils.cpp  IconUtils.hpp  LogManager.cpp  LogManager.hpp  TrialManager.cpp  TrialManager.hpp
